// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotelFilter disables the button when availableFilters.length = 0 1`] = `
<div
  className="hotel-filter"
>
  <button
    className="hotel-filter__button"
    disabled={true}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f0b0",
            "M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z",
          ],
          "iconName": "filter",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </button>
</div>
`;

exports[`HotelFilter when state.open = false only renders the filter button 1`] = `
<div
  className="hotel-filter"
>
  <button
    className="hotel-filter__button"
    disabled={false}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f0b0",
            "M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z",
          ],
          "iconName": "filter",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </button>
</div>
`;

exports[`HotelFilter when state.open = true only renders the filter button 1`] = `
<div
  className="hotel-filter"
>
  <button
    className="hotel-filter__button"
    disabled={false}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f0b0",
            "M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z",
          ],
          "iconName": "filter",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
  </button>
  <div
    className="hotel-filter__menu"
  >
    <div
      className="hotel-filter__menu-item"
      key="car park"
    >
      <input
        checked={true}
        onChange={[Function]}
        type="checkbox"
        value="car park"
      />
      car park
    </div>
    <div
      className="hotel-filter__menu-item"
      key="pool"
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
        value="pool"
      />
      pool
    </div>
    <div
      className="hotel-filter__menu-item"
      key="gym"
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
        value="gym"
      />
      gym
    </div>
  </div>
</div>
`;
